--- a/cv/index.html
+++ b/cv/index.html
@@ -3,11 +3,8 @@ layout: default
 ---
 
 <div class="article-list">
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vShG-Fjr4Fv5V5zyAU77-YdPLxazrKHpyp_rrevaUJONoCVVSg5CPSCpV9156RMZM7QrndXllhFSnyi/pub?embedded=true"></iframe>
+  {% for post in paginator.posts %}
+    <iframe title="cv" src="https://docs.google.com/document/d/e/2PACX-1vShG-Fjr4Fv5V5zyAU77-YdPLxazrKHpyp_rrevaUJONoCVVSg5CPSCpV9156RMZM7QrndXllhFSnyi/pub?embedded=true"></iframe>
+    <p>{{post.excerpt | strip_html}}</p>
+  {% endfor %}
 </div>
-
-<!-- pagination -->
-
-
-</div>
-{% endif %}
