--- a/cv/index.html
+++ b/cv/index.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 
-<div class="article-list">
-  {% for post in paginator.posts %}
-    <iframe title="cv" src="https://docs.google.com/document/d/e/2PACX-1vShG-Fjr4Fv5V5zyAU77-YdPLxazrKHpyp_rrevaUJONoCVVSg5CPSCpV9156RMZM7QrndXllhFSnyi/pub?embedded=true"></iframe>
-    <p>{{post.excerpt | strip_html}}</p>
-  {% endfor %}
+<div>
+
+   <p><iframe title="cv" src="https://docs.google.com/document/d/e/2PACX-1vShG-Fjr4Fv5V5zyAU77-YdPLxazrKHpyp_rrevaUJONoCVVSg5CPSCpV9156RMZM7QrndXllhFSnyi/pub?embedded=true"></iframe></p> 
+
 </div>
