--- a/cv/index.html
+++ b/cv/index.html
@@ -4,6 +4,6 @@ layout: default
 
 <div>
 
-   <p><iframe width="600" height="800"  title="cv" src="https://docs.google.com/document/d/e/2PACX-1vShG-Fjr4Fv5V5zyAU77-YdPLxazrKHpyp_rrevaUJONoCVVSg5CPSCpV9156RMZM7QrndXllhFSnyi/pub?embedded=true"></iframe></p> 
+   <iframe width="600" height="800" title="cv" src="https://docs.google.com/document/d/e/2PACX-1vShG-Fjr4Fv5V5zyAU77-YdPLxazrKHpyp_rrevaUJONoCVVSg5CPSCpV9156RMZM7QrndXllhFSnyi/pub?embedded=true"></iframe>
 
 </div>
